# r1_upper_manipulator

./: CMakeLists.txt  README.md  package.xml
include/: new_manipulator.hpp
include/Motor/Cybergear/: can.hpp  controlcan.h  cybergear_base.hpp
include/Motor/Go/: GO_base.hpp
include/Motor/Go/IOPort/: IOPort.h
include/Motor/Go/serialPort/: SerialPort.h
include/Motor/Go/unitreeMotor/: unitreeMotor.h
include/Motor/M3508/: MotorPid.hpp  m3508_base.hpp
include/Public_function/: Public_function.hpp  Timer.hpp
include/shoot/: Shoot.hpp  shoot_point.hpp
launch/: r1_upper_launch.py
msg/: Cybergearrec.msg  Cybergearsend.msg  M3508rec.msg  M3508send.msg
source/Motor/Go/: GO_base.cpp
source/Motor/M3508/: MotorPid.cpp  m3508_base.cpp
source/Motor/cybergear/: can.cpp  cybergear_base.cpp
source/Public_function/: Public_function.cpp  Timer.cpp
source/shoot/: Shoot.cpp
src/: can_motor.cpp  manipulator.cpp  mytest.cpp  new_manipulator.cpp
